--- a/index.html
+++ b/index.html
@@ -384,19 +384,17 @@ background-color:#FFFFFF;
 
 		
 
-<h1>  版本 &nbsp;7.0.2.2 &nbsp;2020-5-5</h1>
+<h1>  版本 &nbsp;7.0.2.3 &nbsp;2020-5-5</h1>
 
 <p>&nbsp;<a href="https://lanzous.com/b0va98oh" style="color:blue;font-size:18px" onclick="is_weixin();">立即下载 &nbsp;(4.7m)</a></p>
 
 <br>
 
 <li>这是一个集各种视频、小说、音乐、电视于一体的超简易安卓影视软件，各种视频免费、无广告观看，软件精简干净无广告。 </li><br><br>
+		
+<h1>7.0.2.3更新日志</h1><br>
 
-	
-
-<h1>7.0.2.2更新日志</h1><br>
-
-<li> 点亮忍不住又更新软件啦！但这次是满满的干货，没有最好用，只有更好用，基本所有影视版块都支持长按收藏，好用的不得了！</li> 
+<li> 不好意思点亮今天又一次更新软件了，考虑到后面又有其他手机由于把旧服务器拦截导致无法更新和软件闪退等问题的出现，现决定统一升级到最新服务器版本，还希望理解一下哦，我也不想频繁更新的<li>
 
 <li> ①网页搜索-右上角新增解析抖音以及主页的左上角视频解析版块新增抖音解析，快捷搜索里的360影视和搜狗分别改为360解析和搜狗解析；启动图里的新点亮视频挪至中间，点亮音乐界面添加教程入口；</li> 
 
